# cef_recorder_sample

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build_cef.py  gen_video.sh  main.cc  serve.py  serve.sh
.claude/: config.json
res/mac/: Info-helper.alerts.plist  Info.plist
sample/: h264_test.html  index.html  time_1.webm  time_2.webm  time_3.webm  ut.html  webm_test.html
src/: cef_app.cc  cef_app.h  devtools_observer.cc  devtools_observer.h  frame_writer.cc  frame_writer.h  main.cc  offscreen_client.cc  offscreen_client.h  recorder.cc  recorder.h
src/app/: frame_writer.cc  frame_writer.h  main.cc  offscreen_client.cc  recorder.cc  recorder.h
src/helper/: main_helper.cc
src/shared/: cef_app.cc
